kyverno/my-wrong.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-wrong-pod
  namespace: test-kyverno
spec:
  containers:
  - name: hello-ovh
    image: nginx
